Fixed icon spacing

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@ input:focus {
 }
 
 .remove-icon {
-    margin-right: 40px;
     padding-top: 4px;
     float: right;
     color: #7F8C8D;
